force-app/main/default/objects/City__c/fields/Altitude__c.field-meta.xml
<CustomField>
    <fullName>Altitude__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>גובה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>