force-app/main/default/objects/City__c/fields/AreaNum__c.field-meta.xml
<CustomField>
    <fullName>AreaNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>אזור טבעי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>