force-app/main/default/objects/City__c/fields/MetropoliticalAssociationNum__c.field-meta.xml
<CustomField>
    <fullName>MetropoliticalAssociationNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>שיוך מטרופוליני</label>
    <length>255</length>
    <type>Text</type>
</CustomField>