force-app/main/default/objects/City__c/fields/MunicipalStatusNum__c.field-meta.xml
<CustomField>
    <fullName>MunicipalStatusNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>מעמד מונציפאלי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>