force-app/main/default/objects/City__c/fields/NameExtId__c.field-meta.xml
<CustomField>
    <fullName>NameExtId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NameExtId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>