force-app/main/default/objects/City__c/fields/OrganizationalAffiliationNum__c.field-meta.xml
<CustomField>
    <fullName>OrganizationalAffiliationNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>השתייכות ארגונית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>