force-app/main/default/objects/City__c/fields/PlanningCommitteeNum__c.field-meta.xml
<CustomField>
    <fullName>PlanningCommitteeNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ועדת תכנון</label>
    <length>255</length>
    <type>Text</type>
</CustomField>