force-app/main/default/objects/City__c/fields/PoliceStationNum__c.field-meta.xml
<CustomField>
    <fullName>PoliceStationNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>תחנת משטרה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>