force-app/main/default/objects/City__c/fields/PopulationNum__c.field-meta.xml
<CustomField>
    <fullName>PopulationNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>סך הכל אוכליסייה</label>
    <length>255</length>
    <type>Text</type>
</CustomField>