force-app/main/default/objects/City__c/fields/ReligionNum__c.field-meta.xml
<CustomField>
    <fullName>ReligionNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>דת יישוב מספר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>