force-app/main/default/objects/City__c/fields/SubDistrictNum__c.field-meta.xml
<CustomField>
    <fullName>SubDistrictNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>נפה מספר</label>
    <length>255</length>
    <type>Text</type>
</CustomField>